cover image brightness decresed

--- a/index.html
+++ b/index.html
@@ -59,31 +59,31 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                  <img class="cover-img-1" src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block w-50 text-center position-absolute top-50 start-50 translate-middle ">
                     <h1 class="display-1 fw-bold">Get Started Digital
                       Learning</h1>
-                    <p class="text-dark fs-5"> Digital learning increases access to education and knowledge while empowering students with a mindset and capabilities that sets them up for success in their present and future.</p>
+                    <p class="text-light fs-5"> Digital learning increases access to education and knowledge while empowering students with a mindset and capabilities that sets them up for success in their present and future.</p>
                     <button type="button" class="btn btn-primary btn-lg fw-bold">Get Started</button>
 
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                  <img class="cover-img-2" src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                   <div class="carousel-caption d-none d-md-block w-50 text-center position-absolute top-50 start-50 translate-middle ">
                     <h1 class="display-1 fw-bold">Get Started Digital
                       Learning</h1>
-                    <p class="text-dark fs-5"> Digital learning increases access to education and knowledge while empowering students with a mindset and capabilities that sets them up for success in their present and future.</p>
+                    <p class="text-light fs-5"> Digital learning increases access to education and knowledge while empowering students with a mindset and capabilities that sets them up for success in their present and future.</p>
                     <button type="button" class="btn btn-primary btn-lg fw-bold">Get Started</button>
                     </div>
 
                 </div>
                 <div class="carousel-item ">
-                  <img src="images/cover/cover-2.jpg" class="d-block w-100 " alt="...">
+                  <img class="cover-img-3" src="images/cover/cover-2.jpg" class="d-block w-100 " alt="...">
                   <div class="carousel-caption d-none d-md-block w-50 text-center position-absolute top-50 start-50 translate-middle ">
                     <h1 class="display-1 fw-bold">Get Started Digital
                       Learning</h1>
-                    <p class="text-dark fs-5"> Digital learning increases access to education and knowledge while empowering students with a mindset and capabilities that sets them up for success in their present and future.</p>
+                    <p class="text-light fs-5"> Digital learning increases access to education and knowledge while empowering students with a mindset and capabilities that sets them up for success in their present and future.</p>
                     <button type="button" class="btn btn-primary btn-lg fw-bold">Get Started</button>
 
                    
