--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
    <main>
     <section >
       <div class="container">
-          <div class="mainhead">
-            <div class="w-50 h-50 text-center">
+          <div>
+            <div class="text-center mt-5">
               <div>
                 <h1 class="fw-bold text-dark">Discover Our Popular Courses</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
               </div>
              
             </div>
