--- a/index.html
+++ b/index.html
@@ -343,6 +343,22 @@
         </div>
       </div>
   </section>
+   <!-- accordion section ends -->
+
+   <section>
+     <div>
+       <h1 class="text-center fw-bold">Trusted by over 800+ companies</h1>
+     </div>
+         <div>
+            <div class=""><img class="img-fluid" src="images/company/company-1.png" alt=""></div>
+            <div class=""><img class="img-fluid" src="images/company/company-2.png" alt=""></div>
+            <div class=""><img class="img-fluid" src="images/company/company-3.png" alt=""></div>
+            <div class=""><img class="img-fluid" src="images/company/company-4.png" alt=""></div>
+            <div class=""><img class="img-fluid" src="images/company/company-5.png" alt=""></div>
+            <div class=""><img class="img-fluid" src="images/company/company-6.png" alt=""></div>
+         </div>
+
+   </section>
     
 
 
