--- a/index.html
+++ b/index.html
@@ -349,13 +349,15 @@
      <div>
        <h1 class="text-center fw-bold">Trusted by over 800+ companies</h1>
      </div>
-         <div>
+         <div class="companies">
+          <div class="d-flex justify-content-between align-items-center mt-5">
             <div class=""><img class="img-fluid" src="images/company/company-1.png" alt=""></div>
             <div class=""><img class="img-fluid" src="images/company/company-2.png" alt=""></div>
             <div class=""><img class="img-fluid" src="images/company/company-3.png" alt=""></div>
             <div class=""><img class="img-fluid" src="images/company/company-4.png" alt=""></div>
             <div class=""><img class="img-fluid" src="images/company/company-5.png" alt=""></div>
             <div class=""><img class="img-fluid" src="images/company/company-6.png" alt=""></div>
+         </div>
          </div>
 
    </section>
