accordion 1 will only be shown

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                   What is a semantic tag?
                 </button>
               </h2>
-              <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingfour">
+              <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse " aria-labelledby="panelsStayOpen-headingfour">
                 <div class="accordion-body">
                   <strong>The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages.
                 </div>
@@ -332,7 +332,7 @@
                   What is a carousel in bootstrap?
                 </button>
               </h2>
-              <div id="panelsStayOpen-collapsefive" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingfive">
+              <div id="panelsStayOpen-collapsefive" class="accordion-collapse collapse " aria-labelledby="panelsStayOpen-headingfive">
                 <div class="accordion-body">
                   <strong>The carousel is a slideshow for cycling through a series of content, built with CSS 3D transforms and a bit of JavaScript. It works with a series of images, text, or custom markup. It also includes support for previous/next controls and indicators.
                 </div>
@@ -359,6 +359,10 @@
             <div class=""><img class="img-fluid" src="images/company/company-6.png" alt=""></div>
          </div>
          </div>
+
+   </section>
+
+   <section>
 
    </section>
     
