registration responsive done

--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
       <!-- register option starts  -->
   <section style="height: 400px;" class="bg-primary d-flex    justify-content-around align-items-center mt-5">
          
+        <div class="registration">
           <div style="max-width:500px ;" >
             <h1 class="text-light fw-semibold"> Ready To Join? </h1>
             <p  class="text-light fw-semibold"> It is a long established fact that a reader will be distracted by the
@@ -287,6 +288,7 @@
 
 
      </div>
+        </div>
   
   </section>
    <!-- register option ends -->
