--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
    <!-- accordion section ends -->
 
    <!-- companies section starts  -->
-   <section class="companies">
+   <section class="companiestop">
      <div>
        <h1 class="text-center fw-bold">Trusted by over 800+ companies</h1>
      </div>
@@ -396,9 +396,9 @@
 
 
    <!-- footer section starts  -->
-   <section>
-           <footer class="bg-dark">
-           <div>
+   <section class="Endsection">
+           <footer>
+           <div >
             <div>
               <h1 class="text-light text-center mt-5 pt-5 fw-bold"> Pro Edu </h1>
               <p class="text-light text-center">Office 41, Zawaya Buildin, Ghala Muscat, <br>
