final submission done

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="text-center mt-5">
               <div>
                 <h1 class="fw-bold text-dark">Discover Our Popular Courses</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <p>Google Developers Training is a set of online coding courses created by Google engineers. Whether you're new to programming or an experienced developer, learn new skills to advance your career.</p>
               </div>
              
             </div>
@@ -261,8 +261,7 @@
         
           <div class="mt-4" style="max-width:500px ;" >
             <h1 class="text-light fw-semibold"> Ready To Join? </h1>
-            <p  class="text-light fw-semibold"> It is a long established fact that a reader will be distracted by the
-              readable content of a page when looking at its layout.</p>
+            <p  class="text-light fw-semibold"> We are always looking for skilled craftspeople who are hard-working, motivated and passionate about what they do—and have fun while doing it!</p>
 
           </div>
           <!-- Button trigger modal -->
